# cloud

./: .gitignore  CLAUDE copy.md  CLAUDE.md  Makefile  architecture.md  pyproject.toml  terraform.tf
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  lint.yml  terraform.yml  terraform_plan.yml  test_unit.yml
claude_logs/: 20260322_0620_add-work-log-enforcement.md  20260323_1200_add-ci-exclusion-to-claude-md.md  20260323_1200_move-check-claude-log-script.md  20260401_0048_update_claude_md.md  20260401_0900_add-makefile-describe.md
context/: architecture.md  operation.md  product.md  python_modules.md  specification.md  terraform_modules.md
context/kanban/: 001_define_dynamodb_table.md
kanban/: 001_define_dynamodb_table.md  002_define_iam_role_for_lambda_urls.md  003_create_dummy_function.md  004_create_lambda_function.md
sample_data/slack_event_subscriptions/: challenge_payload.json  message_payload.json
scripts/: check-claude-log.sh
src/handlers/error_processor/: error_processor.py
src/handlers/subscription_to_outband/: subscription_to_outband.py
terraform_modules/common/: dynamodb.tf  iam.tf  lambda.tf  ssm.tf
terraform_modules/lambda_function/: variables.tf
terraform_modules/lambda_function_basic/: lambda.tf  variables.tf
