[project]
name = "cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    # arn:aws:lambda:ap-northeast-1:043309354008:layer:LuciferousPublicLayerAwsCloudwatchLogsUrlPython313:1
    "aws-cloudwatch-logs-url==1.0.3",
    # arn:aws:lambda:ap-northeast-1:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:18
    "aws-lambda-powertools[all]==3.15.1",
    "boto3>=1.38.41",
    "boto3-stubs[dynamodb]>=1.38.41",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
